# UTL-ACS

./: Dockerfile  LICENSE  LICENSING.md  README.md  UTL-ACS-v1.0.md  demo.sh  stack.yaml  utl-acs.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/UTLACS/: CoreOntology.hs  GroundReturn.hs  TensorLogic.hs
tests/: TensorLogicSpec.hs
